--- a/templates/index.html
+++ b/templates/index.html
@@ -30,5 +30,11 @@
             <input type="submit" class="btn-info" style="height:50px; width:200px" value="Check Spam or Ham">
         </form>
     </div>
+    <div>
+        <p> <u>Example of SPAM and HAM for starters: </u><br>
+        HAM input:<br> We have a free shopping offer.  <br>
+        SPAM input:<br> free shopping offer. <br>
+        </p> 
+    </div>
 </body>
 </html>
